add_executable(sensor_hub main.cpp)
target_include_directories(sensor_hub PRIVATE ${CMAKE_SOURCE_DIR}/src/core)
target_link_libraries(sensor_hub PRIVATE core)
if(ENABLE_DDS)
  target_compile_definitions(sensor_hub PRIVATE HAVE_CYCLONEDDS=1)
  target_link_libraries(sensor_hub PRIVATE dds_io)
endif()
